# stripe-matching-merging

./: README.md
code/prototype/: CMakeLists.txt  client.cpp  coordinator.cpp  datanode.cpp
code/prototype/conf/: cluster.xml  configuration.xml
code/prototype/include/: FileSystemCN.h  FileSystemClient.h  FileSystemDN.h  MetaInfo.h  ToolBox.h
code/prototype/log/: logFile.txt.client
code/prototype/meta/: fsimage.xml
code/prototype/src/: FileSystemCN.cpp  FileSystemClient.cpp  FileSystemDN.cpp  ToolBox.cpp
code/prototype/src/proto/: coordinator.grpc.pb.cc  coordinator.grpc.pb.h  coordinator.pb.cc  coordinator.pb.h  coordinator.proto  datanode.grpc.pb.cc  datanode.grpc.pb.h  datanode.pb.cc  datanode.pb.h  datanode.proto
code/prototype/test/: test.cpp
code/simulation/: CMakeLists.txt  blossom5  main.cpp
